# har

./: .gitignore  CLEANUP_SUMMARY.md  CLUSTER_DEPLOYMENT.md  MMFIT_MIGRATION.md  README.md  ROADMAP.md  create_image.sh  environment.yml  pyproject.toml  requirements.txt  run_experiment.py  scenario1.ipynb  scenario2.py  scenario3.ipynb  scenario4.ipynb  scenario4_adv.py  scenario4_mhad.py  setup.py  test.py  test_scenario4_mhad.py
conf/: conf.yaml
conf/data/: mhad.yaml  mmfit.yaml  mmfit_debug.yaml  ntu.yaml  ntu100.yaml  ntu50.yaml  utd.yaml
conf/env/: local.yaml  remote.yaml
conf/experiment/: scenario2.yaml
conf/hpo/: scenario22_mmfit.yaml  scenario22_utd.yaml  scenario23_mmfit.yaml  scenario23_utd.yaml  scenario24_mmfit.yaml  scenario24_utd.yaml  scenario25_mmfit.yaml  scenario25_utd.yaml  scenario2_mhad.yaml  scenario2_mmfit.yaml  scenario2_utd.yaml  scenario3_mmfit.yaml  scenario3_utd.yaml  scenario42_mmfit.yaml  scenario42_utd.yaml  scenario4_mmfit.yaml  scenario4_utd.yaml  scenario5_mmfit.yaml  scenario5_utd.yaml
conf/optim/: adam.yaml
conf/scenario/: debug.yaml  scenario2.yaml
conf/trainer/: default.yaml  fast_unused.yaml  lightning.yaml  scenario2.yaml  scenario5.yaml
conf/trainer_backend/: legacy.yaml  lightning.yaml
conf/trial/: scenario22_mmfit.yaml  scenario22_utd.yaml  scenario23_mmfit.yaml  scenario23_utd.yaml  scenario24_mmfit.yaml  scenario24_utd.yaml  scenario25_mmfit.yaml  scenario25_utd.yaml  scenario2_mhad.yaml  scenario2_mmfit.yaml  scenario2_utd.yaml  scenario3_mmfit.yaml  scenario3_utd.yaml  scenario42_mmfit.yaml  scenario42_utd.yaml  scenario4_mmfit.yaml  scenario4_utd.yaml  scenario5_mmfit.yaml  scenario5_utd.yaml
configs/: base.yaml  scenario2.yaml  scenario2_cluster.yaml
datasets/: __init__.py  adv_dataloader.py  adv_dataset.py  mhad_data(old).py  mmfit_data.py  mmfit_id_data.py  mmfit_preprocess.ipynb  ntu_dataloader.py
docs/: CONTEXT.md  HYPERPARAMETER_BEST_PRACTICES.md  ROADMAP.md  THESIS_PLAN.md  experiment_protocol.md
experiments/: run.py  run_eval.py  run_experiment.py  run_hpo.py  run_optuna.py  run_topk.py  run_trial.py  slurm_best.sh  slurm_eval.sh  slurm_hpo.sh  slurm_optuna.sh  slurm_sweep.sh  slurm_trial.sh  submit_hpo_slurm.sh  submit_slurm.sh  submit_sweep.sh
experiments/scenario2/: CLUSTER_READY.md  CONFIG_CONSOLIDATION.md  DATA_PATH_CONFIG.md  README_CLUSTER.md  analyze_hyperparameter_results.py  run_experiment.py  run_hyperparameter_search.py  setup_cluster.sh  submit_hyperparameter_search.sh  submit_slurm.sh  submit_sweep.sh  test_cluster_config.py  test_setup.py
har_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
legacy/: scenario2.py  scenario2_legacy.ipynb  scenario4_adv.py  scenario4_mhad.py  test.ipynb  test_scenario4_mhad.py
legacy/datasets/: __init__.py  mhad_dataloader.py  mhad_dataset.py  mmfit_data.py  ntu_dataset.py  ntu_preprocess.ipynb
legacy/other/: imusim-py3.ipynb  pose2imu.ipynb  (+2 more)
notebooks/: scenario2.ipynb
other/: plot.ipynb
scripts/: mhad_preprocess.ipynb
src/: __init__.py  config.py  data.py  inference.py  lightning_module.py  train.py  train_scenario2.py
tests/: test_collate.py  test_conf.py  test_config.py  test_mmfit_acc_std.ipynb  test_mmfit_pose_acc.ipynb  test_ntu_dataloader.ipynb  test_ntu_pose.ipynb  test_pose2imu_regression.py  test_sanity.py  test_utd_dataloader.ipynb  test_utd_dataloader.py  test_utd_inertial_loader.ipynb  test_utd_inertial_std.ipynb  test_utd_mhad_dataloader.py  test_utd_skeleton_inertial.ipynb  test_utd_skeleton_norm.ipynb
thesis/: 1-introduction.tex  2-relatedworks.tex  3-method.tex  4-implementation.tex  5-conclusion.tex  5-experimental-setup.tex  5-experiments.tex  6-results.tex  7-discussion.tex  8-conclusion.tex  references.bib
utils/: modules.py
(+53 files in other folders)
