[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "har-project"
version = "0.1.0"
description = "Human Activity Recognition project"
requires-python = ">=3.8"
dependencies = [
    # Add your main dependencies here if you want
    # "torch",
    # "numpy", 
    # "matplotlib",
    # "pyyaml",
]

[tool.setuptools.packages.find]
# Automatically find all packages
