############################################
# Minimal packaging config (no extras)
############################################

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "har"
version = "0.1.0"
description = "Human Activity Recognition (Hydra + Lightning)"
requires-python = ">=3.11"
# Keep dependencies empty; conda environment manages them.
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false
